the horizontal scroll was fixed

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -5,6 +5,7 @@ body {
   font-size: 14px;
   line-height: 21px;
   color: #737373;
+  margin:  0 ;
 }
 
 ul,
@@ -553,6 +554,13 @@ li {
 @media screen and ( max-width: 552px) {
   .main-nav__list {
     flex-direction: column;
+  }
+  .container {
+    padding: 0 10px;
+  }
+
+  body {
+    margin: 0 5px;
   }
 }
 
